fix mobile overflow

--- a/views/styles/layout-admin.scss
+++ b/views/styles/layout-admin.scss
@@ -1,6 +1,5 @@
 .wrapper--div{
     overflow-x: hidden;
-    width:100%;
 }
 
 nav{
